# serializer version: 1
# name: test_get
  dict({
    'default_source_types': list([
      'isolate',
      'strain',
    ]),
    'enable_api': True,
    'enable_sentry': True,
    'hmm_slug': 'virtool/virtool-hmm',
    'minimum_password_length': 8,
    'sample_all_read': True,
    'sample_all_write': False,
    'sample_group': 'none',
    'sample_group_read': True,
    'sample_group_write': False,
    'sample_unique_names': True,
  })
# ---
# name: test_update
  dict({
    'default_source_types': list([
      'isolate',
      'strain',
    ]),
    'enable_api': False,
    'enable_sentry': False,
    'hmm_slug': 'virtool/virtool-hmm',
    'minimum_password_length': 10,
    'sample_all_read': True,
    'sample_all_write': False,
    'sample_group': 'none',
    'sample_group_read': True,
    'sample_group_write': False,
    'sample_unique_names': True,
  })
# ---
